turtleart.disktwo.DiskTwo.scala.error
Compilation error:
DiskTwo:22: error: Int does not take parameters
      case 0 => disque(Color.RED,360/18,360/18,100)
                      ^DiskTwo:23: error: Int does not take parameters
      case 1 => disque(Color.BLACK,360/18,360/18,100)
                      ^